@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -46,7 +46,7 @@ import org.junit.runners.Parameterized.Parameters;
 /**
  * Test a simple IndirectSet.
  * this should only be used in jdk1.2+
- * @author: Big Country
+ * @author Big Country
  */
 @RunWith(Parameterized.class)
 public class IndirectSetTest {
@@ -84,8 +84,8 @@ public class IndirectSetTest {
             testList = IndirectCollectionsFactory.createIndirectSet();
         } else {
             try {
-                testList = cls.newInstance();
-            } catch (InstantiationException | IllegalAccessException e) {
+                testList = cls.getConstructor().newInstance();
+            } catch (ReflectiveOperationException e) {
                 throw new RuntimeException(e);
             }
         }
@@ -182,7 +182,7 @@ public class IndirectSetTest {
     @Test
     public void testIterator() {
         int i = 0;
-        for (Iterator stream = testList.iterator(); stream.hasNext(); i++) {
+        for (Iterator<String> stream = testList.iterator(); stream.hasNext(); i++) {
             stream.next();
         }
         assertEquals(list.size(), i);
