@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -29,6 +29,7 @@ public class ReadNcharTest extends BaseNcharTest {
         setDescription("Tests reading NCHAR, NVARCHAR2, NCLOB from Oracle database.");
     }
 
+    @Override
     @SuppressWarnings("deprecation")
     protected void setup() {
         super.setup();
@@ -155,6 +156,7 @@ public class ReadNcharTest extends BaseNcharTest {
     ((AbstractSession)getSession()).getAccessor().decrementCallCount();
     }
 
+    @Override
     protected void test() {
         ExpressionBuilder builder = new ExpressionBuilder();
         Expression exp = (builder.get("id").equal(controlObject.getId()));
@@ -169,10 +171,10 @@ public class ReadNcharTest extends BaseNcharTest {
 
     pstmt.setInt(1, controlObject.getId());
 
-    pstmt.setObject(2, (new Character(controlObject.getChar())).toString());
+    pstmt.setObject(2, (Character.valueOf(controlObject.getChar())).toString());
 
     pstmt.setFormOfUse(3, oracle.jdbc.OraclePreparedStatement.FORM_NCHAR);
-    pstmt.setObject(3, (new Character(controlObject.getNchar())).toString());
+    pstmt.setObject(3, (Character.valueOf(controlObject.getNchar())).toString());
 
     pstmt.setObject(4, controlObject.getStr());
 
@@ -200,10 +202,10 @@ public class ReadNcharTest extends BaseNcharTest {
 
     pstmt.setInt(1, controlObject.getId());
 
-    pstmt.setObject(2, (new Character(controlObject.getChar())).toString());
+    pstmt.setObject(2, (Character.valueOf(controlObject.getChar())).toString());
 
     pstmt.setFormOfUse(3, oracle.jdbc.OraclePreparedStatement.FORM_NCHAR);
-    pstmt.setObject(3, (new Character(controlObject.getNchar())).toString());
+    pstmt.setObject(3, (Character.valueOf(controlObject.getNchar())).toString());
 
     pstmt.setObject(4, controlObject.getStr());
 
