@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -25,7 +25,7 @@ import junit.framework.TestCase;
 
 import org.eclipse.persistence.internal.jaxb.JaxbClassLoader;
 import org.eclipse.persistence.internal.libraries.asm.AnnotationVisitor;
-import org.eclipse.persistence.internal.libraries.asm.ClassWriter;
+import org.eclipse.persistence.internal.libraries.asm.EclipseLinkASMClassWriter;
 import org.eclipse.persistence.internal.libraries.asm.MethodVisitor;
 import org.eclipse.persistence.internal.libraries.asm.Opcodes;
 import org.eclipse.persistence.jaxb.JAXBContextFactory;
@@ -37,14 +37,14 @@ public class ClassLoaderTestCases extends TestCase {
 
     private static final String CLASS_NAME = "ClassLoaderChild";
 
-    private Class classLoaderChildClass;
+    private Class<?> classLoaderChildClass;
     private JAXBContext jaxbContext;
 
     @Override
     protected void setUp() throws Exception {
 
-        ClassWriter cw = new ClassWriter(ClassWriter.COMPUTE_FRAMES);
-        cw.visit(Opcodes.V1_8, Opcodes.ACC_PUBLIC + Opcodes.ACC_SUPER, CLASS_NAME, null, ClassLoaderRoot.class.getName().replace('.', '/'), null);
+        EclipseLinkASMClassWriter cw = new EclipseLinkASMClassWriter();
+        cw.visit(Opcodes.ACC_PUBLIC + Opcodes.ACC_SUPER, CLASS_NAME, null, ClassLoaderRoot.class.getName().replace('.', '/'), null);
         AnnotationVisitor xmlTypeAV = cw.visitAnnotation("Ljakarta/xml/bind/annotation/XmlRootElement;", true);
         xmlTypeAV.visit("name", "root");
         xmlTypeAV.visitEnd();
@@ -52,20 +52,20 @@ public class ClassLoaderTestCases extends TestCase {
         // Write Constructor:
         MethodVisitor mv = cw.visitMethod(Opcodes.ACC_PUBLIC, "<init>", "()V", null, null);
         mv.visitVarInsn(Opcodes.ALOAD, 0);
-        mv.visitMethodInsn(Opcodes.INVOKESPECIAL, ClassLoaderRoot.class.getName().replace('.', '/'), "<init>", "()V");
+        mv.visitMethodInsn(Opcodes.INVOKESPECIAL, ClassLoaderRoot.class.getName().replace('.', '/'), "<init>", "()V", false);
         mv.visitInsn(Opcodes.RETURN);
         mv.visitMaxs(1, 1);
         mv.visitEnd();
 
         JaxbClassLoader classLoader = new JaxbClassLoader(ClassLoaderRoot.class.getClassLoader());
         classLoaderChildClass = classLoader.generateClass(CLASS_NAME, cw.toByteArray());
-        jaxbContext = JAXBContextFactory.createContext(new Class[] {classLoaderChildClass}, null);
+        jaxbContext = JAXBContextFactory.createContext(new Class<?>[] {classLoaderChildClass}, null);
     }
 
     public void testMarshalJSON() throws Exception {
         Marshaller marshaller = jaxbContext.createMarshaller();
         marshaller.setProperty(MarshallerProperties.MEDIA_TYPE, "application/json");
-        ClassLoaderRoot classLoaderChild = (ClassLoaderRoot) classLoaderChildClass.newInstance();
+        ClassLoaderRoot classLoaderChild = (ClassLoaderRoot) classLoaderChildClass.getConstructor().newInstance();
 
         assertEquals(0, classLoaderChild.beforeMarshalCalled);
         assertEquals(0, classLoaderChild.afterMarshalCalled);
@@ -76,7 +76,7 @@ public class ClassLoaderTestCases extends TestCase {
 
     public void testMarshalXML() throws Exception {
         Marshaller marshaller = jaxbContext.createMarshaller();
-        ClassLoaderRoot classLoaderChild = (ClassLoaderRoot) classLoaderChildClass.newInstance();
+        ClassLoaderRoot classLoaderChild = (ClassLoaderRoot) classLoaderChildClass.getConstructor().newInstance();
 
         assertEquals(0, classLoaderChild.beforeMarshalCalled);
         assertEquals(0, classLoaderChild.afterMarshalCalled);
