@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -64,6 +64,7 @@ public class JAXBEmployeesAndIntegersTestCases extends
         return namespaces;
     }
 
+    @Override
     protected Type getTypeToUnmarshalTo() {
 
         try{
@@ -75,6 +76,7 @@ public class JAXBEmployeesAndIntegersTestCases extends
         return null;
     }
 
+    @Override
     public List< InputStream> getControlSchemaFiles(){
         InputStream instream3 = ClassLoader.getSystemResourceAsStream("org/eclipse/persistence/testing/jaxb/listofobjects/employeesAndIntegers3.xsd");
         InputStream instream1 = ClassLoader.getSystemResourceAsStream("org/eclipse/persistence/testing/jaxb/listofobjects/employeesAndIntegers1.xsd");
@@ -89,12 +91,13 @@ public class JAXBEmployeesAndIntegersTestCases extends
     }
 
 
+    @Override
     protected Object getControlObject() {
         List<Integer> integers = new ArrayList<Integer>();
-        integers.add(new Integer("10"));
-        integers.add(new Integer("20"));
-        integers.add(new Integer("30"));
-        integers.add(new Integer("40"));
+        integers.add(Integer.valueOf("10"));
+        integers.add(Integer.valueOf("20"));
+        integers.add(Integer.valueOf("30"));
+        integers.add(Integer.valueOf("40"));
 
         QName qname = new QName("examplenamespace", "root");
         JAXBElement jaxbElement = new JAXBElement(qname, Object.class, null);
@@ -103,6 +106,7 @@ public class JAXBEmployeesAndIntegersTestCases extends
         return jaxbElement;
     }
 
+    @Override
     protected String getNoXsiTypeControlResourceName() {
         return XML_RESOURCE_NO_XSI_TYPE;
     }
