@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -34,11 +34,7 @@ import javax.xml.transform.Source;
 import javax.xml.transform.stream.StreamSource;
 
 import org.eclipse.persistence.internal.jaxb.JaxbClassLoader;
-import org.eclipse.persistence.jaxb.JAXBContextFactory;
-import org.eclipse.persistence.jaxb.JAXBMarshaller;
-import org.eclipse.persistence.jaxb.JAXBUnmarshaller;
-import org.eclipse.persistence.jaxb.JAXBTypeElement;
-import org.eclipse.persistence.jaxb.TypeMappingInfo;
+import org.eclipse.persistence.jaxb.*;
 import org.eclipse.persistence.oxm.record.XMLStreamWriterRecord;
 import org.eclipse.persistence.platform.xml.SAXDocumentBuilder;
 import org.eclipse.persistence.platform.xml.XMLPlatformFactory;
@@ -53,16 +49,18 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
         super(name);
     }
 
-    public void setClasses(Class[] newClasses) throws Exception {
+    @Override
+    public void setClasses(Class<?>[] newClasses) throws Exception {
         classLoader = new JaxbClassLoader(Thread.currentThread()
                 .getContextClassLoader());
         JAXBContextFactory factory = new JAXBContextFactory();
-        jaxbContext = factory.createContext(newClasses, getProperties(), classLoader);
+        jaxbContext = JAXBContextFactory.createContext(newClasses, getProperties(), classLoader);
         jaxbMarshaller = jaxbContext.createMarshaller();
         jaxbUnmarshaller = jaxbContext.createUnmarshaller();
         this.classes = newClasses;
     }
 
+    @Override
     public void setTypes(Type[] newTypes) throws Exception {
         classLoader = new JaxbClassLoader(Thread.currentThread()
                 .getContextClassLoader());
@@ -70,7 +68,7 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
 
          Map props = getProperties();
                 if(props != null){
-            Map overrides = (Map) props.get(JAXBContextFactory.ECLIPSELINK_OXM_XML_KEY);
+            Map overrides = (Map) props.get(JAXBContextProperties.OXM_METADATA_SOURCE);
             if(overrides != null){
                 Iterator valuesIter = overrides.values().iterator();
                 while(valuesIter.hasNext()){
@@ -81,16 +79,18 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
         }
 
 
-        jaxbContext = factory.createContext(newTypes, props, classLoader);
+        jaxbContext = JAXBContextFactory.createContext(newTypes, props, classLoader);
         jaxbMarshaller = jaxbContext.createMarshaller();
         jaxbUnmarshaller = jaxbContext.createUnmarshaller();
         types = newTypes;
     }
 
+    @Override
     protected Object getControlObject() {
         return null;
     }
 
+    @Override
     public void testXMLToObjectFromXMLStreamReader() throws Exception {
         if(null != XML_INPUT_FACTORY) {
             InputStream instream = ClassLoader.getSystemResourceAsStream(resourceName);
@@ -131,7 +131,7 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
         if(null != XML_INPUT_FACTORY) {
             InputStream instream = ClassLoader.getSystemResourceAsStream(resourceName);
             XMLStreamReader xmlStreamReader = XML_INPUT_FACTORY.createXMLStreamReader(instream);
-            Object testObject = ((JAXBUnmarshaller)jaxbUnmarshaller).unmarshal(xmlStreamReader, getClassForDeclaredTypeOnUnmarshal());
+            Object testObject = jaxbUnmarshaller.unmarshal(xmlStreamReader, getClassForDeclaredTypeOnUnmarshal());
             instream.close();
 
             JAXBElement controlObj = (JAXBElement)getControlObject();
@@ -141,6 +141,7 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
     }
 
 
+    @Override
     public void testXMLToObjectFromXMLEventReader() throws Exception {
         if(null != XML_INPUT_FACTORY) {
             InputStream instream = ClassLoader.getSystemResourceAsStream(resourceName);
@@ -179,7 +180,7 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
         if(null != XML_INPUT_FACTORY) {
             InputStream instream = ClassLoader.getSystemResourceAsStream(resourceName);
             javax.xml.stream.XMLEventReader reader = XML_INPUT_FACTORY.createXMLEventReader(instream);
-            Object obj = ((JAXBUnmarshaller)jaxbUnmarshaller).unmarshal(reader, getClassForDeclaredTypeOnUnmarshal());
+            Object obj = jaxbUnmarshaller.unmarshal(reader, getClassForDeclaredTypeOnUnmarshal());
 
             JAXBElement controlObj = (JAXBElement)getControlObject();
             JAXBElement newControlObj = new JAXBElement(controlObj.getName(), getClassForDeclaredTypeOnUnmarshal(), controlObj.getScope(), controlObj.getValue());
@@ -187,6 +188,7 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
         }
     }
 
+    @Override
     public void testXMLToObjectFromNode() throws Exception {
         if(isUnmarshalTest()) {
             InputStream instream = ClassLoader.getSystemResourceAsStream(resourceName);
@@ -202,7 +204,7 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
         if(isUnmarshalTest()) {
             InputStream instream = ClassLoader.getSystemResourceAsStream(resourceName);
             Node node  = parser.parse(instream);
-            Object obj = ((JAXBUnmarshaller)jaxbUnmarshaller).unmarshal(node, getClassForDeclaredTypeOnUnmarshal());
+            Object obj = jaxbUnmarshaller.unmarshal(node, getClassForDeclaredTypeOnUnmarshal());
 
             JAXBElement controlObj = (JAXBElement)getControlObject();
             JAXBElement newControlObj = new JAXBElement(controlObj.getName(), getClassForDeclaredTypeOnUnmarshal(), controlObj.getScope(), controlObj.getValue());
@@ -212,6 +214,7 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
         }
     }
 
+    @Override
     public void testObjectToXMLStreamWriter() throws Exception {
         StringWriter writer = new StringWriter();
         Object objectToWrite = getWriteControlObject();
@@ -229,6 +232,7 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
         objectToXMLDocumentTest(testDocument);
     }
 
+    @Override
     public void testObjectToXMLStreamWriterRecord() throws Exception {
         StringWriter writer = new StringWriter();
         Object objectToWrite = getWriteControlObject();
@@ -247,6 +251,7 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
         objectToXMLDocumentTest(testDocument);
     }
 
+    @Override
     public void testObjectToXMLEventWriter() throws Exception {
         StringWriter writer = new StringWriter();
         Object objectToWrite = getWriteControlObject();
@@ -270,7 +275,7 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
             StringWriter writer = new StringWriter();
 
             javax.xml.stream.XMLOutputFactory factory = javax.xml.stream.XMLOutputFactory.newInstance();
-            factory.setProperty(factory.IS_REPAIRING_NAMESPACES, new Boolean(false));
+            factory.setProperty(factory.IS_REPAIRING_NAMESPACES, Boolean.valueOf(false));
             javax.xml.stream.XMLStreamWriter streamWriter= factory.createXMLStreamWriter(writer);
 
             Object objectToWrite = getWriteControlObject();
@@ -293,7 +298,7 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
             StringWriter writer = new StringWriter();
 
             javax.xml.stream.XMLOutputFactory factory = javax.xml.stream.XMLOutputFactory.newInstance();
-            factory.setProperty(factory.IS_REPAIRING_NAMESPACES, new Boolean(false));
+            factory.setProperty(factory.IS_REPAIRING_NAMESPACES, Boolean.valueOf(false));
             javax.xml.stream.XMLEventWriter eventWriter= factory.createXMLEventWriter(writer);
 
             Object objectToWrite = getWriteControlObject();
@@ -314,6 +319,7 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
 
 
     //Override and don't compare namespaceresolver size
+    @Override
     public void testObjectToXMLStringWriter() throws Exception {
         StringWriter writer = new StringWriter();
         Object objectToWrite = getWriteControlObject();
@@ -329,6 +335,7 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
         objectToXMLDocumentTest(testDocument);
     }
 
+     @Override
      public void testObjectToOutputStream() throws Exception {
             Object objectToWrite = getWriteControlObject();
             ByteArrayOutputStream stream = new ByteArrayOutputStream();
@@ -343,6 +350,7 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
             objectToXMLDocumentTest(testDocument);
         }
 
+        @Override
         public void testObjectToOutputStreamASCIIEncoding() throws Exception {
             Object objectToWrite = getWriteControlObject();
             ByteArrayOutputStream stream = new ByteArrayOutputStream();
@@ -361,12 +369,14 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
         }
 
 
+    @Override
     public void testRoundTrip() throws Exception {
         //This test is not applicable because to Marshal we need a specialized jaxbelement
     }
 
 
     //Override and don't compare namespaceresolver size
+     @Override
      public void testObjectToContentHandler() throws Exception {
             SAXDocumentBuilder builder = new SAXDocumentBuilder();
             Object objectToWrite = getWriteControlObject();
@@ -386,6 +396,7 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
         }
 
         //Override and don't compare namespaceresolver size
+        @Override
         public void testObjectToXMLDocument() throws Exception {
             Object objectToWrite = getWriteControlObject();
 
@@ -420,6 +431,7 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
         testSchemaGen(getControlSchemaFiles());
     }
 
+    @Override
     public Object getWriteControlObject(){
         JAXBElement jaxbElement = (JAXBElement)getControlObject();
 
@@ -439,7 +451,7 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
 
     }
 
-    private Class getClassForDeclaredTypeOnUnmarshal() throws Exception{
+    private Class<?> getClassForDeclaredTypeOnUnmarshal() throws Exception{
         Type typeToUse = getTypeToUnmarshalTo();
         if(typeToUse instanceof Class){
             return (Class)typeToUse;
@@ -457,6 +469,7 @@ public abstract class JAXBListOfObjectsTestCases extends JAXBWithJSONTestCases{
 
     protected abstract String getNoXsiTypeControlResourceName();
 
+    @Override
     public void xmlToObjectTest(Object testObject, Object controlObject) throws Exception {
             log("\n**xmlToObjectTest**");
             log("Expected:");
