@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -18,6 +18,8 @@ import commonj.sdo.Property;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.util.Calendar;
+
+import junit.framework.TestCase;
 import junit.textui.TestRunner;
 import org.eclipse.persistence.sdo.SDOConstants;
 import org.eclipse.persistence.sdo.SDOProperty;
@@ -34,7 +36,7 @@ public class SDODataObjectGetByteConversionTest extends SDODataObjectConversionT
 
     //1. purpose: getByte with boolean property
     public void testGetByteFromBoolean() {
-        SDOProperty property = (SDOProperty)dataObject.getInstanceProperty(PROPERTY_NAME);
+        SDOProperty property = dataObject.getInstanceProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_BOOLEAN);
         dataObject.getType().getDeclaredProperties().add(property);
         dataObject.set(property, true);
@@ -48,14 +50,14 @@ public class SDODataObjectGetByteConversionTest extends SDODataObjectConversionT
     //2. purpose: getByte with Defined Byte Property
     public void testGetByteConversionFromDefinedByteProperty() {
         // dataObject's type add boolean property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_BYTE);
 
         byte by = 12;
 
         dataObject.setByte(property, by);// add it to instance list
 
-        this.assertEquals(by, dataObject.getByte(property));
+        assertEquals(by, dataObject.getByte(property));
     }
 
     //3. purpose: getByte with Undefined Byte Property
@@ -73,7 +75,7 @@ public class SDODataObjectGetByteConversionTest extends SDODataObjectConversionT
 
     //4. purpose: getByte with character property
     public void testGetByteFromCharacter() {
-        SDOProperty property = (SDOProperty)dataObject.getInstanceProperty(PROPERTY_NAME);
+        SDOProperty property = dataObject.getInstanceProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_CHARACTER);
         char theValue = 'e';
         dataObject.set(property, theValue);
@@ -87,13 +89,13 @@ public class SDODataObjectGetByteConversionTest extends SDODataObjectConversionT
     //5. purpose: getByte with Defined Double Property
     public void testGetByteConversionFromDefinedDoubleProperty() {
         // dataObject's type add boolean property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_DOUBLE);
 
         double db = 12;
         dataObject.setDouble(property, db);// add it to instance list
 
-        this.assertEquals((byte)db, dataObject.getByte(property));
+        assertEquals((byte)db, dataObject.getByte(property));
     }
 
     //6. purpose: getByte with Undefined Double Property
@@ -112,13 +114,13 @@ public class SDODataObjectGetByteConversionTest extends SDODataObjectConversionT
     //7. purpose: getByte with Defined float Property
     public void testGetByteConversionFromDefinedFloatProperty() {
         // dataObject's type add float property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_FLOAT);
 
         float fl = 12;
         dataObject.setFloat(property, fl);// add it to instance list
 
-        this.assertEquals((byte)fl, dataObject.getByte(property));
+        assertEquals((byte)fl, dataObject.getByte(property));
     }
 
     //8. purpose: getByte with Undefined float Property
@@ -137,12 +139,12 @@ public class SDODataObjectGetByteConversionTest extends SDODataObjectConversionT
     //9. purpose: getByte with Defined int Property
     public void testGetByteConversionFromDefinedIntProperty() {
         // dataObject's type add int property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_INT);
         int in = 12;
         dataObject.setInt(property, in);// add it to instance list
 
-        this.assertEquals((byte)in, dataObject.getByte(property));
+        assertEquals((byte)in, dataObject.getByte(property));
     }
 
     //10. purpose: getByte with Undefined int Property
@@ -161,13 +163,13 @@ public class SDODataObjectGetByteConversionTest extends SDODataObjectConversionT
     //11. purpose: getByte with Defined long Property
     public void testGetByteConversionFromDefinedLongProperty() {
         // dataObject's type add short property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_LONG);
 
         long lg = 12;
         dataObject.setLong(property, lg);// add it to instance list
 
-        this.assertEquals((byte)lg, dataObject.getByte(property));
+        assertEquals((byte)lg, dataObject.getByte(property));
     }
 
     //12. purpose: getByte with Undefined long Property
@@ -186,13 +188,13 @@ public class SDODataObjectGetByteConversionTest extends SDODataObjectConversionT
     //13. purpose: getByte with Defined short Property
     public void testGetByteConversionFromDefinedShortProperty() {
         // dataObject's type add short property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_SHORT);
 
         short shr = 12;
         dataObject.setShort(property, shr);// add it to instance list
 
-        this.assertEquals((byte)shr, dataObject.getByte(property));
+        assertEquals((byte)shr, dataObject.getByte(property));
     }
 
     //14. purpose: getByte with Undefined short Property
@@ -211,14 +213,14 @@ public class SDODataObjectGetByteConversionTest extends SDODataObjectConversionT
     //15. purpose: getByte with Defined String Property
     public void testGetByteConversionFromDefinedStringProperty() {
         // dataObject's type add int property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_STRING);
 
         String str = "12";
-        Byte s_d = new Byte(str);
+        Byte s_d = Byte.valueOf(str);
         dataObject.setString(property, str);// add it to instance list
 
-        this.assertEquals(s_d.byteValue(), dataObject.getByte(property));
+        assertEquals(s_d.byteValue(), dataObject.getByte(property));
     }
 
     //16. purpose: getDouble with Undefined string Property
@@ -236,7 +238,7 @@ public class SDODataObjectGetByteConversionTest extends SDODataObjectConversionT
 
     //17. purpose: getByte with bytes property
     public void testGetByteFromBytes() {
-        SDOProperty property = (SDOProperty)dataObject.getInstanceProperty(PROPERTY_NAME);
+        SDOProperty property = dataObject.getInstanceProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_BYTES);
         byte[] theValue = new byte[]{10,100};
         dataObject.set(property, theValue);
@@ -249,7 +251,7 @@ public class SDODataObjectGetByteConversionTest extends SDODataObjectConversionT
 
     //18. purpose: getByte with decimal property
     public void testGetByteFromDecimal() {
-        SDOProperty property = (SDOProperty)dataObject.getInstanceProperty(PROPERTY_NAME);
+        SDOProperty property = dataObject.getInstanceProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_DECIMAL);
         BigDecimal theValue = new BigDecimal(12);
         dataObject.set(property, theValue);
@@ -264,7 +266,7 @@ public class SDODataObjectGetByteConversionTest extends SDODataObjectConversionT
 
     //19. purpose: getByte with decimal property
     public void testGetByteFromInteger() {
-        SDOProperty property = (SDOProperty)dataObject.getInstanceProperty(PROPERTY_NAME);
+        SDOProperty property = dataObject.getInstanceProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_INTEGER);
         BigInteger theValue = new BigInteger("12");
         dataObject.set(property, theValue);
@@ -279,7 +281,7 @@ public class SDODataObjectGetByteConversionTest extends SDODataObjectConversionT
 
     //20. purpose: getByte with date property
     public void testGetByteFromDate() {
-        SDOProperty property = (SDOProperty)dataObject.getInstanceProperty(PROPERTY_NAME);
+        SDOProperty property = dataObject.getInstanceProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_DATE);
         dataObject.set(property, Calendar.getInstance().getTime());
         try {
@@ -300,7 +302,7 @@ public class SDODataObjectGetByteConversionTest extends SDODataObjectConversionT
     }
 
     public void testGetByteFromBooleanObject() {
-        SDOProperty property = (SDOProperty)dataObject.getInstanceProperty(PROPERTY_NAME);
+        SDOProperty property = dataObject.getInstanceProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_BOOLEANOBJECT);
         Boolean theValue = Boolean.TRUE;
         dataObject.set(property, theValue);
@@ -313,20 +315,20 @@ public class SDODataObjectGetByteConversionTest extends SDODataObjectConversionT
 
     public void testGetByteConversionFromDefinedByteObjectProperty() {
         // dataObject's type add boolean property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_BYTEOBJECT);
 
         byte by = 12;
 
         dataObject.setByte(property, by);// add it to instance list
 
-        this.assertEquals(by, dataObject.getByte(property));
+        assertEquals(by, dataObject.getByte(property));
     }
 
     public void testGetByteFromCharacterObject() {
-        SDOProperty property = (SDOProperty)dataObject.getInstanceProperty(PROPERTY_NAME);
+        SDOProperty property = dataObject.getInstanceProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_CHARACTEROBJECT);
-        Character theValue = Character.valueOf('e');
+        Character theValue = 'e';
         dataObject.set(property, theValue);
         try {
             dataObject.getByte(property);
@@ -337,55 +339,55 @@ public class SDODataObjectGetByteConversionTest extends SDODataObjectConversionT
 
     public void testGetByteConversionFromDefinedDoubleObjectProperty() {
         // dataObject's type add boolean property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_DOUBLEOBJECT);
 
         double db = 12;
         dataObject.setDouble(property, db);// add it to instance list
 
-        this.assertEquals((byte)db, dataObject.getByte(property));
+        assertEquals((byte)db, dataObject.getByte(property));
     }
 
     public void testGetByteConversionFromDefinedFloatObjectProperty() {
         // dataObject's type add float property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_FLOATOBJECT);
 
         float fl = 12;
         dataObject.setFloat(property, fl);// add it to instance list
 
-        this.assertEquals((byte)fl, dataObject.getByte(property));
+        assertEquals((byte)fl, dataObject.getByte(property));
     }
 
     public void testGetByteConversionFromDefinedIntObjectProperty() {
         // dataObject's type add int property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_INTOBJECT);
         int in = 12;
         dataObject.setInt(property, in);// add it to instance list
 
-        this.assertEquals((byte)in, dataObject.getByte(property));
+        assertEquals((byte)in, dataObject.getByte(property));
     }
 
     public void testGetByteConversionFromDefinedLongObjectProperty() {
         // dataObject's type add short property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_LONGOBJECT);
 
         long lg = 12;
         dataObject.setLong(property, lg);// add it to instance list
 
-        this.assertEquals((byte)lg, dataObject.getByte(property));
+        assertEquals((byte)lg, dataObject.getByte(property));
     }
 
     public void testGetByteConversionFromDefinedShortObjectProperty() {
         // dataObject's type add short property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_SHORTOBJECT);
 
         short shr = 12;
         dataObject.setShort(property, shr);// add it to instance list
 
-        this.assertEquals((byte)shr, dataObject.getByte(property));
+        assertEquals((byte)shr, dataObject.getByte(property));
     }
 }
