@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -19,6 +19,8 @@ import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.util.Calendar;
 import java.util.Date;
+
+import junit.framework.TestCase;
 import junit.textui.TestRunner;
 import org.eclipse.persistence.exceptions.SDOException;
 import org.eclipse.persistence.sdo.SDOProperty;
@@ -38,7 +40,7 @@ public class SDODataObjectGetIntConversionTest extends SDODataObjectConversionTe
 
     //1. purpose: getInt with boolean property
     public void testGetIntFromBoolean() {
-        SDOProperty property = (SDOProperty)dataObject.getInstanceProperty(PROPERTY_NAME);
+        SDOProperty property = dataObject.getInstanceProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_BOOLEAN);
         dataObject.set(property, true);
 
@@ -49,14 +51,14 @@ public class SDODataObjectGetIntConversionTest extends SDODataObjectConversionTe
     //2. purpose: getInt with Defined Byte Property
     public void testGetIntConversionFromDefinedByteProperty() {
         // dataObject's type add boolean property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_BYTE);
 
         byte by = 12;
 
         dataObject.setByte(property, by);// add it to instance list
 
-        this.assertEquals((int)by, dataObject.getInt(property));
+        assertEquals(by, dataObject.getInt(property));
     }
 
     //3. purpose: getInt with Undefined Byte Property
@@ -74,7 +76,7 @@ public class SDODataObjectGetIntConversionTest extends SDODataObjectConversionTe
 
     //4. purpose: getInt with character property
     public void testGetIntFromCharacter() {
-        SDOProperty property = (SDOProperty)dataObject.getInstanceProperty(PROPERTY_NAME);
+        SDOProperty property = dataObject.getInstanceProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_CHARACTER);
         dataObject.set(property, 'c');
         try {
@@ -86,7 +88,7 @@ public class SDODataObjectGetIntConversionTest extends SDODataObjectConversionTe
 
     //4. purpose: getInt with character property
     public void testGetIntFromNullCharacter() {
-        SDOProperty property = (SDOProperty)dataObject.getInstanceProperty(PROPERTY_NAME);
+        SDOProperty property = dataObject.getInstanceProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_CHARACTER);
         try {
             int value = dataObject.getInt(property);
@@ -98,13 +100,13 @@ public class SDODataObjectGetIntConversionTest extends SDODataObjectConversionTe
     //5. purpose: getInt with Defined Double Property
     public void testGetIntConversionFromDefinedDoubleProperty() {
         // dataObject's type add boolean property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_DOUBLE);
 
         double db = 12;
         dataObject.setDouble(property, db);// add it to instance list
 
-        this.assertEquals((int)db, dataObject.getInt(property));
+        assertEquals((int)db, dataObject.getInt(property));
     }
 
     //6. purpose: getInt with Undefined Double Property
@@ -123,13 +125,13 @@ public class SDODataObjectGetIntConversionTest extends SDODataObjectConversionTe
     //7. purpose: getInt with Defined float Property
     public void testGetIntConversionFromDefinedFloatProperty() {
         // dataObject's type add float property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_FLOAT);
 
         float fl = 12;
         dataObject.setFloat(property, fl);// add it to instance list
 
-        this.assertEquals((int)fl, dataObject.getInt(property));
+        assertEquals((int)fl, dataObject.getInt(property));
     }
 
     //8. purpose: getInt with Undefined float Property
@@ -148,13 +150,13 @@ public class SDODataObjectGetIntConversionTest extends SDODataObjectConversionTe
     //9. purpose: getInt with Defined int Property
     public void testGetIntConversionFromDefinedIntProperty() {
         // dataObject's type add int property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_INT);
 
         int in = 12;
         dataObject.setInt(property, in);// add it to instance list
 
-        this.assertEquals((int)in, dataObject.getInt(property));
+        assertEquals(in, dataObject.getInt(property));
     }
 
     //10. purpose: getInt with Undefined int Property
@@ -173,13 +175,13 @@ public class SDODataObjectGetIntConversionTest extends SDODataObjectConversionTe
     //11. purpose: getInt with Defined long Property
     public void testGetIntConversionFromDefinedLongProperty() {
         // dataObject's type add short property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_LONG);
 
         long lg = 12;
         dataObject.setLong(property, lg);// add it to instance list
 
-        this.assertEquals((int)lg, dataObject.getInt(property));
+        assertEquals((int)lg, dataObject.getInt(property));
     }
 
     //12. purpose: getInt with Undefined long Property
@@ -198,13 +200,13 @@ public class SDODataObjectGetIntConversionTest extends SDODataObjectConversionTe
     //13. purpose: getInt with Defined short Property
     public void testGetIntConversionFromDefinedShortProperty() {
         // dataObject's type add short property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_SHORT);
 
         short shr = 12;
         dataObject.setShort(property, shr);// add it to instance list
 
-        this.assertEquals((int)shr, dataObject.getInt(property));
+        assertEquals(shr, dataObject.getInt(property));
     }
 
     //14. purpose: getInt with Undefined short Property
@@ -223,14 +225,14 @@ public class SDODataObjectGetIntConversionTest extends SDODataObjectConversionTe
     //15. purpose: getInt with Defined String Property
     public void testGetIntConversionFromDefinedStringProperty() {
         // dataObject's type add int property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_STRING);
 
         String str = "12";
-        Integer s_d = new Integer(str);
+        Integer s_d = Integer.valueOf(str);
         dataObject.setString(property, str);// add it to instance list
 
-        this.assertEquals(s_d.intValue(), dataObject.getInt(property));
+        assertEquals(s_d.intValue(), dataObject.getInt(property));
     }
 
     //16. purpose: getInt with Undefined string Property
@@ -248,7 +250,7 @@ public class SDODataObjectGetIntConversionTest extends SDODataObjectConversionTe
 
     //17. purpose: getInt with bytes property
     public void testGetIntFromBytes() {
-        SDOProperty property = (SDOProperty)dataObject.getInstanceProperty(PROPERTY_NAME);
+        SDOProperty property = dataObject.getInstanceProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_BYTES);
         String testString = "abc";
         byte[] bytes = testString.getBytes();
@@ -264,14 +266,14 @@ public class SDODataObjectGetIntConversionTest extends SDODataObjectConversionTe
     //18. purpose: getInt with Defined Decimal Property
     public void testGetIntConversionFromDefinedDecimalProperty() {
         // dataObject's type add int property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_DECIMAL);
 
         int db = 12;
         BigDecimal bd = new BigDecimal(db);
         dataObject.setBigDecimal(property, bd);// add it to instance list
 
-        this.assertEquals(bd.intValue(), dataObject.getInt(property));
+        assertEquals(bd.intValue(), dataObject.getInt(property));
     }
 
     //19. purpose: getInt with Undefined decimal Property
@@ -290,13 +292,13 @@ public class SDODataObjectGetIntConversionTest extends SDODataObjectConversionTe
     //20. purpose: getInt with Defined integer Property
     public void testGetIntConversionFromDefinedIntegerProperty() {
         // dataObject's type add int property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_INTEGER);
 
         BigInteger bi = new BigInteger("12");
         dataObject.setBigInteger(property, bi);// add it to instance list
 
-        this.assertEquals(bi.intValue(), dataObject.getInt(property));
+        assertEquals(bi.intValue(), dataObject.getInt(property));
     }
 
     //21. purpose: getInt with Undefined Integer Property
@@ -314,7 +316,7 @@ public class SDODataObjectGetIntConversionTest extends SDODataObjectConversionTe
 
     //22. purpose: getInt with date property
     public void testGetIntFromDate() {
-        SDOProperty property = (SDOProperty)dataObject.getInstanceProperty(PROPERTY_NAME);
+        SDOProperty property = dataObject.getInstanceProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_DATE);
         Date theDate = Calendar.getInstance().getTime();
         dataObject.set(property, theDate);
@@ -337,7 +339,7 @@ public class SDODataObjectGetIntConversionTest extends SDODataObjectConversionTe
 
     //1. purpose: getInt with boolean property
     public void testGetIntFromBooleanObject() {
-        SDOProperty property = (SDOProperty)dataObject.getInstanceProperty(PROPERTY_NAME);
+        SDOProperty property = dataObject.getInstanceProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_BOOLEANOBJECT);
         dataObject.set(property, true);
 
@@ -349,19 +351,19 @@ public class SDODataObjectGetIntConversionTest extends SDODataObjectConversionTe
     //2. purpose: getInt with Defined Byte Property
     public void testGetIntConversionFromDefinedByteObject() {
         // dataObject's type add boolean property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_BYTEOBJECT);
 
         byte by = 12;
 
         dataObject.setByte(property, by);// add it to instance list
 
-        this.assertEquals((int)by, dataObject.getInt(property));
+        assertEquals(by, dataObject.getInt(property));
     }
 
     //4. purpose: getInt with character property
     public void testGetIntFromCharacterObject() {
-        SDOProperty property = (SDOProperty)dataObject.getInstanceProperty(PROPERTY_NAME);
+        SDOProperty property = dataObject.getInstanceProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_CHARACTEROBJECT);
         dataObject.set(property, "t");
         try {
@@ -374,84 +376,84 @@ public class SDODataObjectGetIntConversionTest extends SDODataObjectConversionTe
     //5. purpose: getInt with Defined Double Property
     public void testGetIntConversionFromDefinedDoubleObject() {
         // dataObject's type add boolean property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_DOUBLEOBJECT);
 
         double db = 12;
         dataObject.setDouble(property, db);// add it to instance list
 
-        this.assertEquals((int)db, dataObject.getInt(property));
+        assertEquals((int)db, dataObject.getInt(property));
     }
 
     //7. purpose: getInt with Defined float Property
     public void testGetIntConversionFromDefinedFloatObject() {
         // dataObject's type add float property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_FLOATOBJECT);
 
         float fl = 12;
         dataObject.setFloat(property, fl);// add it to instance list
 
-        this.assertEquals((int)fl, dataObject.getInt(property));
+        assertEquals((int)fl, dataObject.getInt(property));
     }
 
     //9. purpose: getInt with Defined int Property
     public void testGetIntConversionFromDefinedIntObject() {
         // dataObject's type add int property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_INTOBJECT);
 
         int in = 12;
         dataObject.setInt(property, in);// add it to instance list
 
-        this.assertEquals((int)in, dataObject.getInt(property));
+        assertEquals(in, dataObject.getInt(property));
     }
 
      //9. purpose: getInt with Defined int Property
     public void testGetIntConversionFromNullDefinedIntObject() {
         // dataObject's type add int property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_INTOBJECT);
         int value = dataObject.getInt(property);
 
-        this.assertEquals(0, value);
+        assertEquals(0, value);
     }
 
     //11. purpose: getInt with Defined long Property
     public void testGetIntConversionFromDefinedLongObject() {
         // dataObject's type add short property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_LONGOBJECT);
 
         long lg = 12;
         dataObject.setLong(property, lg);// add it to instance list
 
-        this.assertEquals((int)lg, dataObject.getInt(property));
+        assertEquals((int)lg, dataObject.getInt(property));
     }
 
     //13. purpose: getInt with Defined short Property
     public void testGetIntConversionFromDefinedShortObject() {
         // dataObject's type add short property
-        SDOProperty property = ((SDOProperty)type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_SHORTOBJECT);
 
         short shr = 12;
         dataObject.setShort(property, shr);// add it to instance list
 
-        this.assertEquals((int)shr, dataObject.getInt(property));
+        assertEquals(shr, dataObject.getInt(property));
     }
 
     // purpose: setString with incorrect Integer as String Property
     public void testInvalidIntFromDefinedStringProperty() {
         // dataObject's type add int property
-        SDOProperty property = ((SDOProperty) type.getProperty(PROPERTY_NAME));
+        SDOProperty property = type.getProperty(PROPERTY_NAME);
         property.setType(SDOConstants.SDO_INT);
 
         String str = "12&";
         try {
             dataObject.setString(property, str);
         } catch (SDOException sdo) {
-            this.assertEquals(sdo.getErrorCode(), SDOException.INVALID_PROPERTY_VALUE);
+            assertEquals(sdo.getErrorCode(), SDOException.INVALID_PROPERTY_VALUE);
         }
     }
 }
